# openvmm

./: Cargo.toml
openhcl/hcl/: Cargo.toml
openhcl/hcl/src/: ioctl.rs
openhcl/hcl/src/ioctl/: snp.rs  tdx.rs
openhcl/lower_vtl_permissions_guard/: Cargo.toml
openhcl/lower_vtl_permissions_guard/src/: lib.rs
openhcl/openhcl_dma_manager/src/: lib.rs
openhcl/openhcl_tdisp/: Cargo.toml
openhcl/openhcl_tdisp/src/: lib.rs
openhcl/openhcl_tdisp_resources/: Cargo.toml
openhcl/openhcl_tdisp_resources/src/: lib.rs
openhcl/underhill_confidentiality/src/: getters.rs
openhcl/underhill_core/: Cargo.toml
openhcl/underhill_core/src/: nvme_manager.rs  vpci_relay.rs  worker.rs
openhcl/underhill_core/src/dispatch/: vtl2_settings_worker.rs
openhcl/underhill_core/src/emuplat/: netvsp.rs
openhcl/underhill_mem/src/: lib.rs
openhcl/virt_mshv_vtl/: Cargo.toml
openhcl/virt_mshv_vtl/src/: lib.rs
openvmm/hvlite_core/: Cargo.toml
openvmm/hvlite_core/src/: partition.rs
openvmm/hvlite_core/src/worker/: dispatch.rs
support/atomic_ringbuf/: Cargo.toml
support/sev_guest_device/: Cargo.toml
support/sev_guest_device/src/: ioctl.rs  protocol.rs
tmk/tmk_vmm/: Cargo.toml
tmk/tmk_vmm/src/: run.rs
vm/devices/memoryblock/: Cargo.toml
vm/devices/memoryblock/src/: lib.rs
vm/devices/pci/pci_core/: Cargo.toml
vm/devices/pci/pci_core/src/: lib.rs  msi.rs
vm/devices/pci/pci_resources/: Cargo.toml
vm/devices/pci/pci_resources/src/: lib.rs
vm/devices/pci/vpci_client/: Cargo.toml
vm/devices/storage/nvme/: Cargo.toml
vm/devices/storage/nvme/src/: pci.rs  (+1 more)
vm/devices/tdisp/: Cargo.toml
vm/devices/tdisp/src/: command.rs  lib.rs  serialize.rs
vm/devices/user_driver/: Cargo.toml
vm/devices/user_driver/src/: lib.rs  memory.rs  vfio.rs
vm/devices/user_driver_emulated_mock/: Cargo.toml
vm/devices/user_driver_emulated_mock/src/: lib.rs
vm/hv1/hv1_hypercall/src/: imp.rs  tests.rs
vm/hv1/hvdef/src/: lib.rs
vm/vmcore/src/: vpci_msi.rs
vmm_core/: Cargo.toml
vmm_core/src/: device_builder.rs  vmotherboard_adapter.rs
vmm_core/virt/: Cargo.toml
vmm_core/virt/src/: generic.rs  io.rs
vmm_core/virt/src/aarch64/: gic_software_device.rs
vmm_core/virt/src/x86/: apic_software_device.rs
vmm_core/virt_kvm/: Cargo.toml
vmm_core/virt_support_x86emu/: Cargo.toml
vmm_core/virt_support_x86emu/tests/tests/: common.rs
vmm_core/virt_whp/: Cargo.toml
vmm_core/virt_whp/src/: device.rs  hypercalls.rs  lib.rs  synic.rs
vmm_core/vmotherboard/: Cargo.toml
vmm_core/vmotherboard/src/chipset/: mod.rs
(+16 files in other folders)
