# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openhcl_tdisp"
rust-version.workspace = true
edition.workspace = true

[dependencies]
hcl.workspace = true
hcl_mapper.workspace = true
lower_vtl_permissions_guard.workspace = true

tracing.workspace = true
hvdef.workspace = true
inspect.workspace = true
user_driver.workspace = true
virt.workspace = true
vmcore.workspace = true
tdisp.workspace = true

anyhow.workspace = true

[lints]
workspace = true
