# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "tdisp"
edition.workspace = true
rust-version.workspace = true

[dependencies]
inspect.workspace = true
tracing.workspace = true
anyhow.workspace = true
zerocopy.workspace = true
hvdef.workspace = true

[lints]
workspace = true
