# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "tdisp"
edition.workspace = true
rust-version.workspace = true

[dependencies]
inspect.workspace = true
anyhow.workspace = true
hvdef.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
