# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "tdisp"
edition.workspace = true
rust-version.workspace = true

[dependencies]
inspect.workspace = true
anyhow.workspace = true
hvdef.workspace = true
tracing.workspace = true
thiserror.workspace = true
open_enum.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
